# zynk

./: Cargo.toml  Dockerfile  Makefile  README.md  build.rs
benches/: lsm_vs_hashmap.rs
deploy/k8s/: kustomization.yaml  lease.yaml  rbac.yaml  zynk-lb.yaml  zynkd-headless.yaml  zynkd-statefulset.yaml
src/: lib.rs  main.rs
src/engine/: crdt.rs  kv.rs  mod.rs
src/storage/: mod.rs
src/storage/sstable/: block.rs  builder.rs  index.rs  iter.rs  mod.rs  reader.rs
