[package]
name = "zynk"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "=0.11.18", features = ["json", "rustls-tls"] }
# Pin transitive deps to avoid ICU-based idna/url requiring Rust 1.83
url = "=2.4.1"
idna = "=0.3.0"
crc32fast = "1.4"
input_handler = "0.1"
hex = "0.4"
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12.6"

[build-dependencies]
tonic-build = { version = "0.11", features = ["prost"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "lsm_vs_hashmap"
harness = false
